[package]
name = "erth-exchange"
version = "0.0.2"
authors = ["Braydn Larsen"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = []

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
secret-toolkit-storage = "0.10.0"
secret-toolkit = { version = "0.10.0", features = ["snip20"] }


[[bin]]
name = "schema"
required-features = ["schema"]

